Fix typos in DateTimeNumericFieldElement.cpp and DateTimeSymbolicFieldElement.cpp https://bugs.webkit.org/show_bug.cgi?id=103717

Reviewed by Hajime Morita.

* html/shadow/DateTimeNumericFieldElement.cpp:
(WebCore::DateTimeNumericFieldElement::customStyleForRenderer):
maximum, not maxium.
* html/shadow/DateTimeSymbolicFieldElement.cpp:
(WebCore::DateTimeSymbolicFieldElement::customStyleForRenderer): Ditto.


Canonical link: https://commits.webkit.org/121828@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136215 268f45cc-cd09-0410-ab3c-d52691b4dbfc